@@ -10,8 +10,11 @@ ocaml (3.09.3-2) UNRELEASED; urgency=low
       substituted for @OCamlDllDir@ in .in files
     - remove files which have been generated from their .in counterparts upon
       clean target invocation
+  * Policy
+    - mandate the compilation of *.cm[ao] with debugging information for
+      libraries and forbid it for bytecode programs
 
- -- Stefano Zacchiroli <zack@debian.org>  Tue,  2 Jan 2007 19:35:02 +0100
+ -- Stefano Zacchiroli <zack@debian.org>  Mon, 09 Apr 2007 19:46:36 +0200
 
 ocaml (3.09.3-1) experimental; urgency=low
 
